2010-04-22	Guido Diepen	<guido@guidodiepen.nl>
	* Add help > About menu and minor modification to about text

2010-04-05	Guido Diepen	<guido@guidodiepen.nl>
	* Finished implementation of Registry Viewer. Now you can browse
	  through the device registry from within SynCE-KPM
	* Minor cleanup	

2010-02-25	Guido Diepen	<guido@guidodiepen.nl>
	* Bump version to 0.15
	* Implement beginning of Registry Viewer

2010-02-12	Guido Diepen	<guido@guidodiepen.nl>
	* In the main screen, a picture of the device will now be 
	shown. This picture is taken from the device itself.

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>
	* 0.14 release

2009-03-27	Mark Ellis	<mark@mpellis.org.uk>
	* dataserver.py - use new pyrapi2 file handling API

2009-03-26	Mark Ellis	<mark@mpellis.org.uk>
	* dataserver.py - add device name None to RAPISession calls

2009-03-22	Guido Diepen	<guido@guidodiepen.nl>
	* dataserver.py - Ensure that when a HAL DeviceRemoved occurs (e.g
	when a bluetooth device, not the wm device, is removed. This would
	now result in synce-kpm considering the wm device to be disconnected
	* dataserver.py - Check for sync-engine on Dbus whenever a device 
	is connected. In case of sync-engine being dbus-autolaunched, this
	will ensure that sync-engine is started as soon as device is plugged in.

2009-01-10	Mark Ellis	<mark@mpellis.org.uk>

	* 0.13 release

2008-12-18	Mark Ellis	<mark@mpellis.org.uk>
	* dataserver.py - catch rapi errors from getting free space of unmounted
	mount points eg. \Network; now requires pyrapi2 >= 0.13

2008-07-15	Guido Diepen	<guido@guidodiepen.nl>
	* Bumped the version to 0.12

2008-06-19	Guido Diepen	<guido@guidodiepen.nl>
	* Fixed issue with closing messagebox telling the user to unlock his WM6
	device when the program does not have focus
	* Fixed a small problem with non-initialized global var in dataserver

2008-06-18	Guido Diepen	<guido@guidodiepen.nl>
	* Fixed leftOver sendMessage which does not exist anymore