@@ -1,0 +1,5 @@
+include AUTHORS
+include ChangeLog
+include COPYING
+recursive-include synceKPM *.svg *.ui
+include TODO
